fix overlapping clipboard elements
Height of the tray is 124px, so clipboard elements should be of the same
size. Also the position should be fixed, since tray is also fixed. (At
least for now)

--- a/app/assets/stylesheets/fassets_presentations/master.css.scss
+++ b/app/assets/stylesheets/fassets_presentations/master.css.scss
@@ -194,11 +194,11 @@ ol .slide {
 #clipboard {
   width: auto;
   display: inline;
-  position: absolute;
+  position: fixed;
   bottom: 0px;
   left: 0px;
   background-color: white;
-  height: 130px;
+  height: 124px;
   padding-left: 15px;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
